objects/Ultra_Track_Container__c.object
<CustomObject>
    <fields>
        <fullName>Is_Tracking_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Fields__c</fullName>
        <label>Tracked Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ultra Track Container</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UTC-{00}</displayFormat>
        <label>Ultra Track Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ultra Track Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>